--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,57 @@
-name_modules
-.env*
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Production builds
 dist/
+.next/
+build/
+
+# Environment files
+.env*
+!.env.example
+
+# Database
+*.db
+*.sqlite
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Turbo
 .turbo/
+
+# Docker
+docker-compose.override.yml
+
+# Prisma
+apps/api/prisma/migrations/migration_lock.toml
