--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "physio-doctor-platform",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:web": "pnpm --filter web dev",
+    "dev:api": "pnpm --filter api dev",
+    "build": "npm-run-all build:*",
+    "build:web": "pnpm --filter web build",
+    "build:api": "pnpm --filter api build",
+    "install:all": "pnpm install"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.0.0"
+  }
 }
