--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "flag": "^5.0.1",
+    "react-hook-form": "^7.64.0",
+    "zod": "^4.1.11"
   }
 }
