--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm-run-all build:*",
     "build:web": "pnpm --filter web build",
     "build:api": "pnpm --filter api build",
-    "install:all": "pnpm install"
+    "install:all": "pnpm install",
+    "postinstall": "pnpm --filter api prisma:generate"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
