--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,8 +14,7 @@
     "dev": "nest start --watch",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:push": "prisma db push",
-    "postinstall": "prisma generate"
+    "prisma:push": "prisma db push"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.20",
